# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  animator.py  coins.py  config.txt  draw.py  maze.txt  maze_generator-0.0.0-py3-none-any.whl  maze_generator.py  mazegenerator-1.0.0-py3-none-any.whl  output_validator (1).py  parser.py  player.py  requirements.txt  timer.py
A-Maze-ing/: maze.txt
A-Maze-ing/src/: generator.py
mazegenerator/: README.md  maze_generator.py  pyproject.toml
mlx/: __init__.py  mlx.py
mlx/docs/: mlx.3  mlx.h  mlx_extra.3  mlx_loop.3  mlx_new_image.3  mlx_new_window.3  mlx_pixel_put.3
mlx/test/: Dont_panic.xpm  mlxtest.py  simple_test.py
src/: a_maze_ing.py  draw.py
